--- a/templates/base.html
+++ b/templates/base.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>hylla DB</title>
+    <title>Hylla</title>
     
     <link href="{{ url_for('static', filename='css/bootstrap.min.css') }}" rel="stylesheet">
     <link href="{{ url_for('static', filename='css/bootstrap-icons.css') }}" rel="stylesheet">
+    <link rel="shortcut icon" href="{{ url_for('static', filename='Hylla_favicon.ico') }}">
     
     <style>
         /* --- RESPONSIVE SEARCH BAR FIX --- */
